@@ -98,12 +98,23 @@ public final class StringUtil {
     }
 
     /**
-     * Tests if a code point is "whitespace" as defined in the HTML spec.
+     * Tests if a code point is "whitespace" as defined in the HTML spec. Used for output HTML.
      * @param c code point to test
      * @return true if code point is whitespace, false otherwise
+     * @see #isActuallyWhitespace(int)
      */
     public static boolean isWhitespace(int c){
         return c == ' ' || c == '\t' || c == '\n' || c == '\f' || c == '\r';
+    }
+
+    /**
+     * Tests if a code point is "whitespace" as defined by what it looks like. Used for Element.text etc.
+     * @param c code point to test
+     * @return true if code point is whitespace, false otherwise
+     */
+    public static boolean isActuallyWhitespace(int c){
+        return c == ' ' || c == '\t' || c == '\n' || c == '\f' || c == '\r' || c == 160;
+        // 160 is &nbsp; (non-breaking space). Not in the spec but expected.
     }
 
     /**
@@ -132,7 +143,7 @@ public final class StringUtil {
         int c;
         for (int i = 0; i < len; i+= Character.charCount(c)) {
             c = string.codePointAt(i);
-            if (isWhitespace(c)) {
+            if (isActuallyWhitespace(c)) {
                 if ((stripLeading && !reachedNonWhite) || lastWasWhite)
                     continue;
                 accum.append(' ');
